--- a/TheMovieDB/TheMovieDB/features/Search/Search.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Search/Search.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -30,87 +31,60 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WrR-BA-SGq">
                                             <rect key="frame" x="162" y="11" width="232" height="178"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="unz-ct-vUb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="232" height="178"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="The Amazing Spider-man" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv5-fK-bcj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="232" height="65"/>
+                                                    <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
+                                                    <color key="textColor" name="gold"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2012" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNB-Ln-tTo">
+                                                    <rect key="frame" x="0.0" y="73" width="232" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8le-B7-avM">
+                                                    <rect key="frame" x="0.0" y="100.5" width="232" height="77.5"/>
                                                     <subviews>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pZj-qm-2cg">
-                                                            <rect key="frame" x="0.0" y="0.0" width="232" height="89"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Amazing Spider-man" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv5-fK-bcj">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="232" height="89"/>
-                                                                    <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="21"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kiD-Z5-0QX">
+                                                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="vv5-fK-bcj" secondAttribute="trailing" id="62d-R1-4Gv"/>
-                                                                <constraint firstItem="vv5-fK-bcj" firstAttribute="top" secondItem="pZj-qm-2cg" secondAttribute="top" id="7Vz-KQ-y6B"/>
-                                                                <constraint firstItem="vv5-fK-bcj" firstAttribute="leading" secondItem="pZj-qm-2cg" secondAttribute="leading" id="GDM-IP-5lA"/>
-                                                                <constraint firstAttribute="bottom" secondItem="vv5-fK-bcj" secondAttribute="bottom" id="cYA-aE-zHd"/>
+                                                                <constraint firstAttribute="height" constant="20" id="DoP-qW-a2A"/>
+                                                                <constraint firstAttribute="width" constant="20" id="SID-kS-Jfs"/>
                                                             </constraints>
-                                                        </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wf1-BL-DO7">
-                                                            <rect key="frame" x="0.0" y="89" width="232" height="44.5"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2012" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNB-Ln-tTo">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="116" height="44.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <constraints>
-                                                                <constraint firstItem="tNB-Ln-tTo" firstAttribute="width" secondItem="Wf1-BL-DO7" secondAttribute="width" multiplier="0.5" id="5xC-3f-tsz"/>
-                                                                <constraint firstItem="tNB-Ln-tTo" firstAttribute="leading" secondItem="Wf1-BL-DO7" secondAttribute="leading" id="NMY-3e-2KY"/>
-                                                                <constraint firstItem="tNB-Ln-tTo" firstAttribute="top" secondItem="Wf1-BL-DO7" secondAttribute="top" id="Onc-PX-NkQ"/>
-                                                                <constraint firstAttribute="bottom" secondItem="tNB-Ln-tTo" secondAttribute="bottom" id="obs-6N-hze"/>
-                                                            </constraints>
-                                                        </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8le-B7-avM">
-                                                            <rect key="frame" x="0.0" y="133.5" width="232" height="44.5"/>
-                                                            <subviews>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kiD-Z5-0QX">
-                                                                    <rect key="frame" x="8" y="12.5" width="20" height="20"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="20" id="VwW-cm-JE5"/>
-                                                                    </constraints>
-                                                                    <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                    <state key="normal" backgroundImage="star.fill" catalog="system"/>
-                                                                </button>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.0 on IMDB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jl5-7J-NfW">
-                                                                    <rect key="frame" x="44" y="0.0" width="180" height="44.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <constraints>
-                                                                <constraint firstItem="Jl5-7J-NfW" firstAttribute="leading" secondItem="kiD-Z5-0QX" secondAttribute="trailing" constant="16" id="B1k-tD-Z3S"/>
-                                                                <constraint firstAttribute="trailing" secondItem="Jl5-7J-NfW" secondAttribute="trailing" constant="8" id="Efq-eK-hRm"/>
-                                                                <constraint firstItem="Jl5-7J-NfW" firstAttribute="top" secondItem="8le-B7-avM" secondAttribute="top" id="Wnb-fK-l4U"/>
-                                                                <constraint firstItem="kiD-Z5-0QX" firstAttribute="centerY" secondItem="8le-B7-avM" secondAttribute="centerY" id="YvA-jD-e3j"/>
-                                                                <constraint firstAttribute="bottom" secondItem="Jl5-7J-NfW" secondAttribute="bottom" id="ZV8-xQ-hKJ"/>
-                                                                <constraint firstItem="kiD-Z5-0QX" firstAttribute="leading" secondItem="8le-B7-avM" secondAttribute="leading" constant="8" id="tXx-GQ-2Wz"/>
-                                                            </constraints>
-                                                        </view>
+                                                            <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <state key="normal" backgroundImage="star.fill" catalog="system"/>
+                                                        </button>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.0 on IMDB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jl5-7J-NfW">
+                                                            <rect key="frame" x="24" y="0.0" width="208" height="20"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="pZj-qm-2cg" firstAttribute="height" secondItem="unz-ct-vUb" secondAttribute="height" multiplier="1/2" id="Dbf-FX-S8c"/>
-                                                        <constraint firstItem="8le-B7-avM" firstAttribute="height" secondItem="unz-ct-vUb" secondAttribute="height" multiplier="1/4" id="q2B-Rm-Xah"/>
-                                                        <constraint firstItem="Wf1-BL-DO7" firstAttribute="height" secondItem="unz-ct-vUb" secondAttribute="height" multiplier="1/4" id="yRl-qS-frg"/>
+                                                        <constraint firstItem="Jl5-7J-NfW" firstAttribute="top" secondItem="8le-B7-avM" secondAttribute="top" id="FBL-zs-6WO"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Jl5-7J-NfW" secondAttribute="trailing" id="OMT-OC-L9Z"/>
+                                                        <constraint firstItem="kiD-Z5-0QX" firstAttribute="leading" secondItem="8le-B7-avM" secondAttribute="leading" id="Xid-XW-a85"/>
+                                                        <constraint firstItem="kiD-Z5-0QX" firstAttribute="top" secondItem="8le-B7-avM" secondAttribute="top" id="jrK-Bc-dvF"/>
+                                                        <constraint firstItem="Jl5-7J-NfW" firstAttribute="leading" secondItem="kiD-Z5-0QX" secondAttribute="trailing" constant="4" id="w40-1u-4MJ"/>
+                                                        <constraint firstItem="Jl5-7J-NfW" firstAttribute="centerY" secondItem="kiD-Z5-0QX" secondAttribute="centerY" id="yHs-rX-cRK"/>
                                                     </constraints>
-                                                </stackView>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="unz-ct-vUb" secondAttribute="trailing" id="BIz-Ly-XmP"/>
-                                                <constraint firstItem="unz-ct-vUb" firstAttribute="leading" secondItem="WrR-BA-SGq" secondAttribute="leading" id="cxS-FY-GV0"/>
-                                                <constraint firstItem="unz-ct-vUb" firstAttribute="top" secondItem="WrR-BA-SGq" secondAttribute="top" id="fFK-kC-Pcp"/>
-                                                <constraint firstAttribute="bottom" secondItem="unz-ct-vUb" secondAttribute="bottom" id="vu0-Zc-bUZ"/>
+                                                <constraint firstItem="8le-B7-avM" firstAttribute="top" secondItem="tNB-Ln-tTo" secondAttribute="bottom" constant="8" id="300-67-pZe"/>
+                                                <constraint firstAttribute="trailing" secondItem="tNB-Ln-tTo" secondAttribute="trailing" id="AOb-Lm-DXB"/>
+                                                <constraint firstItem="tNB-Ln-tTo" firstAttribute="top" secondItem="vv5-fK-bcj" secondAttribute="bottom" constant="8" id="BF6-F7-Og8"/>
+                                                <constraint firstAttribute="bottom" secondItem="8le-B7-avM" secondAttribute="bottom" id="CeE-RY-tCR"/>
+                                                <constraint firstItem="8le-B7-avM" firstAttribute="leading" secondItem="WrR-BA-SGq" secondAttribute="leading" id="F8F-g6-ou0"/>
+                                                <constraint firstItem="vv5-fK-bcj" firstAttribute="top" secondItem="WrR-BA-SGq" secondAttribute="top" id="KSW-aZ-84E"/>
+                                                <constraint firstItem="vv5-fK-bcj" firstAttribute="leading" secondItem="WrR-BA-SGq" secondAttribute="leading" id="Rur-q0-Gvw"/>
+                                                <constraint firstAttribute="trailing" secondItem="vv5-fK-bcj" secondAttribute="trailing" id="Wkf-6j-1X1"/>
+                                                <constraint firstAttribute="trailing" secondItem="8le-B7-avM" secondAttribute="trailing" id="fM1-La-eVN"/>
+                                                <constraint firstItem="tNB-Ln-tTo" firstAttribute="leading" secondItem="WrR-BA-SGq" secondAttribute="leading" id="omH-zh-ahG"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -144,5 +118,8 @@
     </scenes>
     <resources>
         <image name="star.fill" catalog="system" width="128" height="116"/>
+        <namedColor name="gold">
+            <color red="1" green="0.6380000114440918" blue="0.0020000000949949026" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
