--- a/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
@@ -35,7 +35,7 @@
                                                             <constraint firstAttribute="width" constant="100" id="B5N-xJ-dTY"/>
                                                             <constraint firstAttribute="height" constant="80" id="aD4-5K-RoY"/>
                                                         </constraints>
-                                                        <color key="tintColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="tintColor" name="red"/>
                                                         <state key="normal" backgroundImage="play.rectangle" catalog="system"/>
                                                     </button>
                                                 </subviews>
@@ -193,7 +193,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="138" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9JY-jz-pqk">
-                                                                <rect key="frame" x="59" y="4" width="20" height="20"/>
+                                                                <rect key="frame" x="59" y="23" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="iQC-c3-8qv"/>
                                                                     <constraint firstAttribute="width" constant="20" id="msv-CG-fb9"/>
@@ -202,32 +202,31 @@
                                                                 <state key="normal" backgroundImage="star.fill" catalog="system"/>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9c-Ze-iM7">
-                                                                <rect key="frame" x="0.0" y="27.5" width="138" height="54.5"/>
+                                                                <rect key="frame" x="0.0" y="31" width="138" height="36"/>
                                                                 <string key="text">7.7/10
 16056</string>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="C9c-Ze-iM7" firstAttribute="leading" secondItem="BGd-PQ-NwV" secondAttribute="leading" id="3tj-b2-JhF"/>
-                                                            <constraint firstItem="C9c-Ze-iM7" firstAttribute="height" secondItem="BGd-PQ-NwV" secondAttribute="height" multiplier="2/3" id="XOE-m8-bAl"/>
-                                                            <constraint firstItem="9JY-jz-pqk" firstAttribute="top" secondItem="BGd-PQ-NwV" secondAttribute="top" constant="4" id="Yez-OG-NgC"/>
                                                             <constraint firstAttribute="trailing" secondItem="C9c-Ze-iM7" secondAttribute="trailing" id="jOv-EA-T4x"/>
+                                                            <constraint firstItem="9JY-jz-pqk" firstAttribute="centerY" secondItem="BGd-PQ-NwV" secondAttribute="centerY" constant="-8" id="rY8-W7-T9h"/>
                                                             <constraint firstItem="9JY-jz-pqk" firstAttribute="centerX" secondItem="BGd-PQ-NwV" secondAttribute="centerX" id="sxW-PF-34V"/>
-                                                            <constraint firstAttribute="bottom" secondItem="C9c-Ze-iM7" secondAttribute="bottom" id="tIn-zx-AXf"/>
+                                                            <constraint firstItem="C9c-Ze-iM7" firstAttribute="centerY" secondItem="BGd-PQ-NwV" secondAttribute="centerY" constant="8" id="wFu-By-AZx"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3nt-cb-frI">
                                                         <rect key="frame" x="138" y="0.0" width="276" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQf-NW-wVa">
-                                                                <rect key="frame" x="16" y="16" width="244" height="50"/>
-                                                                <color key="backgroundColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <rect key="frame" x="16" y="18.5" width="244" height="45"/>
+                                                                <color key="backgroundColor" name="red"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="50" id="wVZ-Mw-0wT"/>
+                                                                    <constraint firstAttribute="height" constant="45" id="wVZ-Mw-0wT"/>
                                                                 </constraints>
                                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <inset key="imageEdgeInsets" minX="-25" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -248,7 +247,6 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="BGd-PQ-NwV" secondAttribute="bottom" id="7c5-NP-Thv"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="width" secondItem="O1J-GS-CDM" secondAttribute="width" multiplier="1/3" id="8We-nq-h7o"/>
-                                                    <constraint firstAttribute="height" constant="100" id="HIh-2g-I0s"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="leading" secondItem="O1J-GS-CDM" secondAttribute="leading" id="Hyg-F8-SLQ"/>
                                                     <constraint firstAttribute="bottom" secondItem="3nt-cb-frI" secondAttribute="bottom" id="Q84-8K-Ty3"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="top" secondItem="O1J-GS-CDM" secondAttribute="top" id="Vzj-kj-D3o"/>
@@ -308,6 +306,9 @@
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <namedColor name="gold">
             <color red="1" green="0.6380000114440918" blue="0.0020000000949949026" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="red">
+            <color red="0.59600001573562622" green="0.085000000894069672" blue="0.11100000143051147" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
